translate and update admin panel by ColdSubzero

--- a/Admin/tpl/login.css
+++ b/Admin/tpl/login.css
@@ -1,4 +1,4 @@
-﻿body, html {
+body, html {
 	background-attachment:fixed;
 	background-image:url('images/bg2.gif');
 	background-repeat:repeat-x;
@@ -11,18 +11,18 @@
 input {
 	border:1px solid #0B5393;
 	color:#666666;
-	direction:rtl;
+	direction:ltr;
 	font-family:Tahoma;
 	font-size:9pt;
 	margin-top:2px;
 }
 table, tr, td, div {
-	direction:rtl;
+	direction:ltr;
 	font-family:Tahoma;
 	font-size:8pt;
 }
 p {
-	direction:rtl;
+	direction:ltr;
 	font-family:Tahoma;
 	font-size:8pt;
 	line-height:130%;
@@ -55,5 +55,5 @@ a:hover      { color: #0099FF }
 	padding: 3px; 
     background-color: #FFFFFF;
 	-moz-border-radius:10px;
-	direction:rtl
+	direction:ltr
 }
