--- a/gpack/travian_Travian_4.0_41/lang/ir/compact.css
+++ b/gpack/travian_Travian_4.0_41/lang/ir/compact.css
@@ -1179,16 +1179,17 @@ body.manual .anwers{margin-top:15px;}#tileDetails{width:552px;}.dialog #tileDeta
 #tileDetails.village-12 .detailImage.natars{background-image:url(../../img/g/detail.popup/village/natars/f12-rtl.png);}
 #tileDetails.village-99 .detailImage.natars{background-image:url(../../img/g/detail.popup/village/natars/f3-rtl.png);}
 #tileDetails.oasis-2 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w2-rtl.jpg);}
-#tileDetails.oasis-3 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w3-rtl.jpg);}
-#tileDetails.oasis-4 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w4-rtl.jpg);}
-#tileDetails.oasis-6 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w6-rtl.jpg);}
-#tileDetails.oasis-7 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w7-rtl.jpg);}
-#tileDetails.oasis-8 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w8-rtl.jpg);}
-#tileDetails.oasis-10 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w10-rtl.jpg);}
-#tileDetails.oasis-11 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w11-rtl.jpg);}
-#tileDetails.oasis-12 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w12-rtl.jpg);}
-#tileDetails.oasis-14 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w14-rtl.jpg);}
-#tileDetails.oasis-15 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w15-rtl.jpg);}
+#tileDetails.oasis-1 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w3-rtl.jpg);}
+#tileDetails.oasis-3 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w4-rtl.jpg);}
+#tileDetails.oasis-4 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w6-rtl.jpg);}
+#tileDetails.oasis-6 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w7-rtl.jpg);}
+#tileDetails.oasis-5 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w8-rtl.jpg);}
+#tileDetails.oasis-7 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w10-rtl.jpg);}
+#tileDetails.oasis-9 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w11-rtl.jpg);}
+#tileDetails.oasis-8 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w12-rtl.jpg);}
+#tileDetails.oasis-10 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w14-rtl.jpg);}
+#tileDetails.oasis-11 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w14-rtl.jpg);}
+#tileDetails.oasis-12 .detailImage{background-image:url(../../img/g/detail.popup/oasis/w15-rtl.jpg);}
 #tileDetails.landscape-clay .detailImage{background-image:url(../../img/g/detail.popup/landscape/clay-rtl.jpg);}
 #tileDetails.landscape-forest .detailImage{background-image:url(../../img/g/detail.popup/landscape/forest-rtl.jpg);}
 #tileDetails.landscape-hill .detailImage{background-image:url(../../img/g/detail.popup/landscape/hill-rtl.jpg);}
@@ -1365,7 +1366,10 @@ div.b20-3{background-image:url(../../img/map/d20-3.gif);}
 div.b30-3{background-image:url(../../img/map/d30-3.gif);}
 div.b04-0{background-image:url(../../img/map/d34-1.gif);}
 div.b04-5{background-image:url(../../img/map/dnatars.gif);}
+/*---fix ww---*/
+div.b14-4{background-image:url(../../img/map/dnatars.gif);}
 div.b14-5{background-image:url(../../img/map/dnatars.gif);}
+
 div.b24-5{background-image:url(../../img/map/dnatars.gif);}
 div.b34-5{background-image:url(../../img/map/dnatars.gif);}
 
